# dash-loading-spinners

./: .gitignore  .prettierrc  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  Project.toml  README.md  _validate_init.py  component.py  examples.py  helpers.py  index.html  main.py  not_found.py  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  usage.py
.github/: CONTRIBUTING.md
R/: dlsAudio.R  dlsBallTriangle.R  dlsBars.R  dlsBeat.R  dlsBounce.R  dlsCircle.R  dlsCircles.R  dlsClimbingBox.R  dlsClip.R  dlsClock.R  dlsCustom.R  dlsDot.R  dlsDualRing.R  dlsEllipsis.R  dlsFade.R  dlsGrid.R  dlsGridAlt.R  dlsGridFade.R  dlsHash.R  dlsHearts.R  dlsHourglass.R  dlsLoader.R  dlsMoon.R  dlsMutatingDots.R  dlsOval.R  dlsPacman.R  dlsPlane.R  dlsPropagate.R  dlsPuff.R  dlsPuffAlt.R  dlsPulse.R  dlsRSBeat.R  dlsRSBounce.R  dlsRSCircle.R  dlsRSClimbingBox.R  dlsRSClip.R  dlsRSClock.R  dlsRSDot.R  dlsRSFade.R  dlsRSGrid.R  (+32 more)
dash_loading_spinners/: Audio.py  BallTriangle.py  Bars.py  Beat.py  Bounce.py  Circle.py  Circles.py  ClimbingBox.py  Clip.py  Clock.py  Custom.py  Dot.py  DualRing.py  Ellipsis.py  Fade.py  Grid.py  GridAlt.py  GridFade.py  Hash.py  Hearts.py  Hourglass.py  Loader.py  Moon.py  MutatingDots.py  Oval.py  Pacman.py  Plane.py  Propagate.py  Puff.py  PuffAlt.py  Pulse.py  RSBeat.py  RSBounce.py  RSCircle.py  RSClimbingBox.py  RSClip.py  RSClock.py  RSDot.py  RSFade.py  RSGrid.py  (+37 more)
docs/: app.py  component.py  component_parser.py  custom.py  examples.py  main.py  markdown_parser.py  not_found.py  pyproject.toml  run.py  setup.cfg
docs/assets/: bootstrap.css  bootstrap.min.css
docs/docs_app/: __init__.py  app.py  component.py  component_parser.py  custom.py  examples.py  main.py
docs/docs_app/assets/: about.txt  bootstrap.css  bootstrap.min.css
docs_app/: __init__.py  custom.py  examples.py  main.py  not_found.py
examples/: usage.py
man/: dlsAudio.Rd  dlsBallTriangle.Rd  dlsBars.Rd  dlsBeat.Rd  dlsBounce.Rd  dlsCircle.Rd  dlsCircles.Rd  dlsClimbingBox.Rd  dlsClip.Rd  dlsClock.Rd  dlsCustom.Rd  dlsDot.Rd  dlsDualRing.Rd  dlsEllipsis.Rd  dlsFade.Rd  dlsGrid.Rd  dlsGridAlt.Rd  dlsGridFade.Rd  dlsHash.Rd  dlsHearts.Rd  dlsHourglass.Rd  dlsLoader.Rd  dlsMoon.Rd  dlsMutatingDots.Rd  dlsOval.Rd  dlsPacman.Rd  dlsPlane.Rd  dlsPropagate.Rd  dlsPuff.Rd  dlsPuffAlt.Rd  dlsPulse.Rd  dlsRSBeat.Rd  dlsRSBounce.Rd  dlsRSCircle.Rd  dlsRSClimbingBox.Rd  dlsRSClip.Rd  dlsRSClock.Rd  dlsRSDot.Rd  dlsRSFade.Rd  dlsRSGrid.Rd  (+31 more)
src/: DashLoadingSpinners.jl  dls_audio.jl  dls_bars.jl  (+69 more)
(+93 files in other folders)
