[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool.black]
exclude = "node_modules"
line-length = 79

[isort]
multi_line_output = 3
include_trailing_comma = true
known_third_party = [
    "dash",
    "dash_bootstrap_components",
    "dash_core_components",
    "dash_html_components",
    "numpy",
    "plotly",
]
