[metadata]
name = docs_app
description = Documentation for dash-loading-spinners
license = MIT
version = 1.0.0
author = glsdown
author_email = gemmalsdown@icloud.com
url = https://github.com/glsdown/dash-loading-spinners

[options]
packages=find:
python_requires = >=3.9
install_requires =
    dash>=2.0.0
    dash-bootstrap-components>=1.0.0
    dash-loading-spinners>=1.0.0
    gunicorn
    numpy
